tmux: add tmux-easy-motion for advanced setup

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -100,6 +100,14 @@ set -g @plugin 'tmux-plugins/tmux-sensible' # Make tmux more sensible
 set -g @plugin 'tmux-plugins/tmux-sessionist' # more keymap for session
 set -g @plugin 'tmux-plugins/tmux-yank'	# copied text could be used outside
 
+set -g @plugin 'IngoMeyer441/tmux-easy-motion'
+set -g @easy-motion-prefix 'J'
+set -g @easy-motion-target-keys "fjdkslaghrueiwoqptyvncmxzb1234567890"
+set -g @easy-motion-default-motion "bd-w"
+set -g @easy-motion-dim-style "fg=colour242"
+set -g @easy-motion-highlight-style "fg=colour196,bold"
+set -g @easy-motion-highlight-2-first-style "fg=brightyellow,bold"
+set -g @easy-motion-highlight-2-second-style "fg=yellow,bold"
 
 ## Themes
 # Dracula: https://draculatheme.com/tmux
