tmux: add tmux-finger to copy string faster

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -100,6 +100,12 @@ set -g @plugin 'tmux-plugins/tmux-sensible' # Make tmux more sensible
 set -g @plugin 'tmux-plugins/tmux-sessionist' # more keymap for session
 set -g @plugin 'tmux-plugins/tmux-yank'	# copied text could be used outside
 
+# tmux-thumbs
+# https://github.com/fcsonline/tmux-thumbs
+set -g @plugin 'fcsonline/tmux-thumbs'
+run-shell ${XDG_CONFIG_HOME}/tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+set -g @thumbs-key 'h'
+
 set -g @plugin 'IngoMeyer441/tmux-easy-motion'
 set -g @easy-motion-prefix 'J'
 set -g @easy-motion-target-keys "fjdkslaghrueiwoqptyvncmxzb1234567890"
