tmux: add shortcut with kill-window

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -42,6 +42,7 @@ set -s command-alias[11] hs='split-window -v'
 bind ` send-prefix			# press '`' twice => '`'
 bind a last-window
 bind r move-window -r		# sort the windows
+bind k kill-window
 
 # create a window next to current one
 bind c new-window -a -c "#{pane_current_path}"
