tmux: optimize variable usage

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -14,6 +14,10 @@
 # erase all keybinds
 # unbind -a
 
+tmux_home="${XDG_CONFIG_HOME}/tmux"
+tmux_plugin="${tmux_home}/plugins"
+tmux_tool="${tmux_home}/tools"
+
 set -g prefix `				# set '`' as prefix key
 
 # solve colorized issue in tmux
@@ -63,15 +67,13 @@ bind -r BTab prev
 bind s choose-tree -sZ -O name
 
 # open debug ide
-debug_console="${XDG_CONFIG_HOME}/tmux/tools/debug-console"
-bind o run-shell ${debug_console}
+bind o run-shell "${tmux_tools}/debug_console"
 
 # search history above
 bind j copy-mode \; send-key ?
 
 # open float terminal
-fterm="${XDG_CONFIG_HOME}/tmux/tools/float-term"
-bind Space run-shell ${fterm}
+bind Space run-shell "${tmux_tools}/float-term"
 
 ## Plugins
 # List of plugins
@@ -104,7 +106,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'	# copied text could be used outside
 # tmux-thumbs
 # https://github.com/fcsonline/tmux-thumbs
 set -g @plugin 'fcsonline/tmux-thumbs'
-run-shell ${XDG_CONFIG_HOME}/tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+run-shell ${tmux_plugin}/tmux-thumbs/tmux-thumbs.tmux
 set -g @thumbs-key 'h'
 
 set -g @plugin 'IngoMeyer441/tmux-easy-motion'
