tmux: add more instruction and fix some bugs for tmux init

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -67,13 +67,13 @@ bind -r BTab prev
 bind s choose-tree -sZ -O name
 
 # open debug ide
-bind o run-shell "${tmux_tools}/debug_console"
+bind o run-shell "${tmux_tool}/debug_console"
 
 # search history above
 bind j copy-mode \; send-key ?
 
 # open float terminal
-bind Space run-shell "${tmux_tools}/float-term"
+bind Space run-shell "${tmux_tool}/float-term"
 
 ## Plugins
 # List of plugins
@@ -81,19 +81,6 @@ bind Space run-shell "${tmux_tools}/float-term"
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
-tpm_dir="$XDG_CONFIG_HOME/tmux/plugins/tpm"
-tpm_url='https://github.com/tmux-plugins/tpm'
-flag='~/.tpm-first-run'
-
-if "test ! -d ${tpm_dir}" \
-    "run 'git clone --depth=1 $tpm_url $tpm_dir \
-             && ${tpm_dir}/bin/install_plugins; \
-             touch ${flag}'"
-
-msg='display-message -p "press Leader + I to install other plugins" ; \
-         set-hook -gu session-created ;'
-if "test -f ${flag}" \
-    "run 'rm -f ${flag}'; set-hook -g session-created '${msg}'"
 
 # TPM(tmux plugin manager) itself
 set -g @plugin 'tmux-plugins/tpm'
@@ -148,13 +135,46 @@ set -g @dracula-refresh-rate 5
 # https://github.com/microsoft/WSL/issues/5931
 set -g escape-time 50
 
-# Initialize TPM (keep this line at the very bottom of tmux.conf)
-# run-shell '-b' is for background process.
-# go into tmux and wait for applied changes are async
-guide='https://github.com/tmux-plugins/tpm'
-err="Fail to launch tmux plugin manager (${tpm_dir}/tpm)."
-msg="Reference ${guide} for detailed information."
-run -b "${tpm_dir}/tpm || echo \"${err} ${msg}\""
+tpm_dir="${tmux_plugin}/tpm"
+tpm_url='https://github.com/tmux-plugins/tpm'
+flag="${tmux_home}/no-tpm-plugin"
+
+if "[[ ! -d ${tpm_dir} ]]" {
+	display-message -p "start to download git repository for tpm."
+	if "git clone --depth=1 $tpm_url $tpm_dir" {
+		display-message -p "tpm has been downloaded."
+		run "touch ${flag}"
+	} {
+		display-message -p "failed to download tpm."
+	}
+
+	# Initialize TPM (keep this line at the very bottom of tmux.conf)
+	if "! ${tpm_dir}/tpm" {
+		display-message -p "fail to launch tpm, ${tpm_dir}/tpm."
+		display-message -p "${tpm_url}"
+	}
+
+	if "${tpm_dir}/bin/install_plugins" {
+		display-message -p "install all other plugins finished."
+		display-message -p "press 'prefix + I' to enable plugins manually."
+		run "rm -f ${flag}"
+	} {
+		display-message -p "something wrong with tpm plugin install."
+	}
+} {
+	if "[[ -e ${flag} ]]" {
+		display-message -p "it seems like your plugin(s) wasn't be installed."
+		display-message -p "please press 'prefix + I' to check it."
+		display-message -p "THE MESSAGE WILL NOT SHOW AGAIN."
+		run "rm -f ${flag}"
+	}
+
+	# Initialize TPM (keep this line at the very bottom of tmux.conf)
+	if -b "! ${tpm_dir}/tpm" {
+		display-message -p "fail to launch tpm, ${tpm_dir}/tpm."
+		display-message -p "${tpm_url}"
+	}
+}
 
 ## Plugins note
 # 1. https://github.com/roosta/tmux-fuzzback
