tmux: fix incorrect path problem

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -67,13 +67,13 @@ bind -r BTab prev
 bind s choose-tree -sZ -O name
 
 # open debug ide
-bind o run-shell "${tmux_tools}/debug_console"
+bind o run-shell "${tmux_tool}/debug_console"
 
 # search history above
 bind j copy-mode \; send-key ?
 
 # open float terminal
-bind Space run-shell "${tmux_tools}/float-term"
+bind Space run-shell "${tmux_tool}/float-term"
 
 ## Plugins
 # List of plugins
