tmux: failed to open debug-console

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -67,7 +67,7 @@ bind -r BTab prev
 bind s choose-tree -sZ -O name
 
 # open debug ide
-bind o run-shell "${tmux_tool}/debug_console"
+bind o run-shell "${tmux_tool}/debug-console"
 
 # search history above
 bind j copy-mode \; send-key ?
