tmux: fix incorrect path of tpm

--- a/config/tmux/float-term.conf
+++ b/config/tmux/float-term.conf
@@ -11,6 +11,10 @@
 ## containers:
 # session > window > pane
 
+tmux_home="${XDG_CONFIG_HOME}/tmux"
+tmux_plugin="${tmux_home}/plugins"
+tpm_dir="${tmux_plugin}/tpm"
+
 set -g prefix `				# set '`' as prefix key
 
 # solve colorized issue in tmux
