tmux: add rename plugin for tmux

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -73,8 +73,7 @@ bind o run-shell "${tmux_tool}/debug-console"
 bind j copy-mode \; send-key ?
 
 ## Plugins
-# List of plugins
-# Other examples:
+# Examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
@@ -83,9 +82,10 @@ bind j copy-mode \; send-key ?
 set -g @plugin 'tmux-plugins/tpm'
 
 # Prefix + I to install these plugins
-set -g @plugin 'tmux-plugins/tmux-sensible' # Make tmux more sensible
-set -g @plugin 'tmux-plugins/tmux-sessionist' # more keymap for session
-set -g @plugin 'tmux-plugins/tmux-yank'	# copied text could be used outside
+set -g @plugin 'tmux-plugins/tmux-sensible'     # Make tmux more sensible
+set -g @plugin 'tmux-plugins/tmux-sessionist'   # more keymap for session
+set -g @plugin 'tmux-plugins/tmux-yank'         # Copied text could be used outside tmux
+set -g @plugin 'ofirgall/tmux-window-name'      # Name your tmux windows smartly, like IDE's.
 
 # tmux-thumbs
 # https://github.com/fcsonline/tmux-thumbs
