tmux: divide/remove the panes evenly

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -50,8 +50,13 @@ bind k kill-window
 
 # create a window next to current one
 bind c new-window -a -c "#{pane_current_path}"
-bind \\ split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+
+# NOTE: the trick for balancing pane could not handle complex layout
+# add horizontal/vertical pane and balance the layout
+bind \\ split-window -h -c "#{pane_current_path}" ';' select-layout -E
+bind - split-window -v -c "#{pane_current_path}" ';' select-layout -E
+# remove the pane and balance the layout
+bind x kill-pane ';' select-layout -E
 
 # select next pane
 bind n select-pane -Z -t :.+
