tmux: resize pane while resort the window number

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -45,7 +45,7 @@ set -s command-alias[11] hs='split-window -v'
 ## Key mapping
 bind ` send-prefix			# press '`' twice => '`'
 bind a last-window
-bind r move-window -r		# sort the windows
+bind r move-window -r ';' select-layout -E	# sort the windows
 bind k confirm-before -p "Do you really want to kill this window? (y/n)" kill-window
 
 # create a window next to current one
