tmux: a really big update for tmux.conf

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,15 +1,13 @@
 # Global tmux setting
 
-## Command Table
-# | short  | full command      |
-# |--------+-------------------|
-# | set    | set-option        |
-# | setw   | set-window-option |
-# | bind   | bind-key          |
-# | unbind | unbind-key        |
+## Abbreviations:
+# set   : set-option
+# setw  : set-window-option
+# bind  : bind-key
+# unbind: unbind-key
 
-## containers:
-# session > window > pane
+## Unit:
+# session > window > layout > pane
 
 # erase all keybinds
 # unbind -a
@@ -18,7 +16,7 @@ tmux_home="${XDG_CONFIG_HOME}/tmux"
 tmux_plugin="${tmux_home}/plugins"
 tmux_tool="${tmux_home}/tools"
 
-set -g prefix `				# set '`' as prefix key
+set -g prefix `	# set ` as prefix key
 
 # solve colorized issue in tmux
 # For nvim :checkhealth setting
@@ -37,6 +35,7 @@ set -g focus-events on		# Used for vim-tmux-clipboard
 setw -g monitor-bell on		# monitor bell in the window
 setw -g visual-bell on		# show visual alert when task complete
 setw -g bell-action other	# only other, not current window, triggers bell
+setw -g mode-keys vi
 
 # Add alias for split-window
 set -s command-alias[10] vs='split-window -h'
@@ -44,62 +43,96 @@ set -s command-alias[11] hs='split-window -v'
 
 ## Key mapping
 bind ` send-prefix			# press '`' twice => '`'
-bind a last-window
-bind r move-window -r ';' select-layout -E	# sort the windows
+
+# Layout:
+# - unidirectional switch to next layout
+unbind M-1
+unbind M-2
+unbind M-3
+unbind M-4
+unbind M-5
+unbind Space
+bind l next-layout
+
+# Session:
+# [x] pop up menu for session operation
+bind s choose-tree -sZ -O name			# improve keybind s
+
+# Window:
+# - unidirectional switch to next pane
+# [x] pop up menu for window operation
+# [x] move window
+# [x] show window options
+unbind p
+unbind .
+unbind &
 bind k confirm-before -p "Do you really want to kill this window? (y/n)" kill-window
+bind r move-window -r ';' select-layout -E	# sort the windows
+bind w choose-tree -w -f '#{m:#{session_attached},1}'
+bind a last-window
+bind -r Tab select-window -n
 
-# create a window next to current one
-bind c new-window -a -c "#{pane_current_path}"
+bind c new-window -a -c "#{pane_current_path}"	# enhance keybind c
 
-# NOTE: the trick for balancing pane could not handle complex layout
-# add horizontal/vertical pane and balance the layout
-bind \\ split-window -h -c "#{pane_current_path}" ';' select-layout -E
+# Pane:
+# - select-layout -E could only balance the simple layout
+# - unidirectional switch to next pane
+# [x] pop up menu for pane operation
+unbind Up		# Change to the pane above of the current pane.
+unbind Down		# Change to the pane below of the current pane.
+unbind Left		# Change to the pane left of the current pane.
+unbind Right	# Change to the pane right of the current pane.
+unbind \"
+bind | split-window -h -c "#{pane_current_path}" ';' select-layout -E
+unbind %
 bind - split-window -v -c "#{pane_current_path}" ';' select-layout -E
-# remove the pane and balance the layout
-bind x kill-pane ';' select-layout -E
+bind x kill-pane ';' select-layout -E	# enhance keybind x
+unbind o
+bind -r n select-pane -t :.+			# enhance keybind n
 
-# select next pane
-bind n select-pane -Z -t :.+
-# select previous pane
-bind p select-pane -Z -t :.-
+# Copy-mode:
+unbind [
+bind v copy-mode
+unbind ]
+bind p paste-buffer
+bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'C-v' send -X rectangle-toggle ';' send -X begin-selection
+bind -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind -T copy-mode-vi Escape send -X cancel
 
-# to next window
-bind -r Tab next
-# Shift+Tab: to previous window
-bind -r BTab prev
-
-# sort the sessions by name
-bind s choose-tree -sZ -O name
-
-# open debug ide
-bind o run-shell "${tmux_tool}/debug-console"
-
-# search history above
-bind j copy-mode \; send-key ?
+# Misc:
+bind [ popup -E -T "Plugin Menu" \
+		"tmux new -n plugin ${tmux_tool}/main-menu ';' \
+		set status off"
+bind o run "${tmux_tool}/debug-console"
+bind ? list-keys -T prefix ';' list-keys -T copy-mode-vi
+bind j copy-mode ';' send-key ?			# search history from botton
+bind , new-window -n 'tmux-profile' nvim ${tmux_home}/tmux.conf
 
 ## Plugins
-# Examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
+bind ] popup -EE -T "Plugin Menu" \
+		"tmux new -n plugin ${tmux_tool}/plugin-menu ';' \
+		set status off"
 
 # TPM(tmux plugin manager) itself
 set -g @plugin 'tmux-plugins/tpm'
 
 # Prefix + I to install these plugins
 set -g @plugin 'tmux-plugins/tmux-sensible'     # Make tmux more sensible
+set -g @plugin 'lljbash/tmux-update-display'	# Update $DISPLAY after re-attach a session.
+# Kill process with 'prefix + *'
+set -g @plugin 'tmux-plugins/tmux-cowboy'		# Kill no-response process in current pane
 set -g @plugin 'tmux-plugins/tmux-sessionist'   # more keymap for session
 set -g @plugin 'tmux-plugins/tmux-yank'         # Copied text could be used outside tmux
 set -g @plugin 'ofirgall/tmux-window-name'      # Name your tmux windows smartly, like IDE's.
 
-# tmux-thumbs
-# https://github.com/fcsonline/tmux-thumbs
 set -g @plugin 'fcsonline/tmux-thumbs'
-run-shell ${tmux_plugin}/tmux-thumbs/tmux-thumbs.tmux
-set -g @thumbs-key 'h'
+unbind \'							# Prompt for a window index to select.
+set -g @thumbs-key "\'"
 
 set -g @plugin 'IngoMeyer441/tmux-easy-motion'
-set -g @easy-motion-prefix 'J'
+unbind \;							# To last pane
+set -g @easy-motion-prefix "\\;"	# '//;' prevent the error of iteration
 set -g @easy-motion-target-keys "fjdkslaghrueiwoqptyvncmxzb1234567890"
 set -g @easy-motion-default-motion "bd-w"
 set -g @easy-motion-dim-style "fg=colour242"
@@ -137,47 +170,5 @@ set -g @dracula-refresh-rate 5
 # https://github.com/microsoft/WSL/issues/5931
 set -g escape-time 50
 
-tpm_dir="${tmux_plugin}/tpm"
-tpm_url='https://github.com/tmux-plugins/tpm'
-flag="${tmux_home}/no-tpm-plugin"
-
-if "[[ ! -d ${tpm_dir} ]]" {
-	display-message -p "start to download git repository for tpm."
-	if "git clone --depth=1 $tpm_url $tpm_dir" {
-		display-message -p "tpm has been downloaded."
-		run "touch ${flag}"
-	} {
-		display-message -p "failed to download tpm."
-	}
-
-	# Initialize TPM (keep this line at the very bottom of tmux.conf)
-	if "! ${tpm_dir}/tpm" {
-		display-message -p "fail to launch tpm, ${tpm_dir}/tpm."
-		display-message -p "${tpm_url}"
-	}
-
-	if "${tpm_dir}/bin/install_plugins" {
-		display-message -p "install all other plugins finished."
-		display-message -p "press 'prefix + I' to enable plugins manually."
-		run "rm -f ${flag}"
-	} {
-		display-message -p "something wrong with tpm plugin install."
-	}
-} {
-	if "[[ -e ${flag} ]]" {
-		display-message -p "it seems like your plugin(s) wasn't be installed."
-		display-message -p "please press 'prefix + I' to check it."
-		display-message -p "THE MESSAGE WILL NOT SHOW AGAIN."
-		run "rm -f ${flag}"
-	}
-
-	# Initialize TPM (keep this line at the very bottom of tmux.conf)
-	if -b "! ${tpm_dir}/tpm" {
-		display-message -p "fail to launch tpm, ${tpm_dir}/tpm."
-		display-message -p "${tpm_url}"
-	}
-}
-
-## Plugins note
-# 1. https://github.com/roosta/tmux-fuzzback
-# too slow to open fzf (in local NB)
+# Wrapped TPM script
+run -b ${tmux_home}/bootstrap
