tmux: update the keybinding and comments

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -70,7 +70,7 @@ bind k confirm-before -p "Do you really want to kill this window? (y/n)" kill-wi
 bind r move-window -r ';' select-layout -E	# sort the windows
 bind w choose-tree -w -f '#{m:#{session_attached},1}'
 bind a last-window
-bind -r Tab select-window -n
+bind -r N select-window -n
 
 bind c new-window -a -c "#{pane_current_path}"	# enhance keybind c
 
@@ -162,7 +162,6 @@ set -g @dracula-cpu-usage false
 set -g @dracula-refresh-rate 5
 
 # tmux-gruvbox: https://github.com/egel/tmux-gruvbox
-# Good theme, but need more customization
 # set -g @plugin 'egel/tmux-gruvbox'
 # set -g @tmux-gruvbox 'dark' # or 'light'
 
