tmux: add menus for low frequent usage

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -119,9 +119,11 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'     # Make tmux more sensible
 # Kill process with 'prefix + *'
 set -g @plugin 'tmux-plugins/tmux-cowboy'		# Kill no-response process in current pane
-set -g @plugin 'tmux-plugins/tmux-sessionist'   # more keymap for session
 set -g @plugin 'tmux-plugins/tmux-yank'         # Copied text could be used outside tmux
 set -g @plugin 'ofirgall/tmux-window-name'      # Name your tmux windows smartly, like IDE's.
+
+set -g @plugin 'jaclu/tmux-menus'
+set -g @menus_trigger '\.'
 
 set -g @plugin 'fcsonline/tmux-thumbs'
 unbind \'							# Prompt for a window index to select.
