tmux: fix keybind issue of dot

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -123,7 +123,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'         # Copied text could be used outs
 set -g @plugin 'ofirgall/tmux-window-name'      # Name your tmux windows smartly, like IDE's.
 
 set -g @plugin 'jaclu/tmux-menus'
-set -g @menus_trigger '\.'
+set -g @menus_trigger '.'
 
 set -g @plugin 'fcsonline/tmux-thumbs'
 unbind \'							# Prompt for a window index to select.
