tmux: adjust menu position

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -124,6 +124,8 @@ set -g @plugin 'ofirgall/tmux-window-name'      # Name your tmux windows smartly
 
 set -g @plugin 'jaclu/tmux-menus'
 set -g @menus_trigger '.'
+set -g @menus_location_x 'P'
+set -g @menus_location_y 'P'
 
 set -g @plugin 'fcsonline/tmux-thumbs'
 unbind \'							# Prompt for a window index to select.
