tmux: bind C with clear history

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -108,6 +108,7 @@ bind o run "${tmux_tool}/debug-console"
 bind ? list-keys -T prefix ';' list-keys -T copy-mode-vi
 bind j copy-mode ';' send-key ?			# search history from botton
 bind , new-window -n 'tmux-profile' nvim ${tmux_home}/tmux.conf
+bind C confirm-before -p "Do you really want to clear history? (y/n)" clear-history
 
 ## Plugins
 bind ] popup -EE -T "Plugin Menu" \
