tmux: show pane number while switching between panes

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -88,7 +88,7 @@ unbind %
 bind - split-window -v -c "#{pane_current_path}" ';' select-layout -E
 bind x kill-pane ';' select-layout -E	# enhance keybind x
 unbind o
-bind -r n select-pane -t :.+			# enhance keybind n
+bind -r n display-panes -b -d 200 ';' select-pane -Z -t :.+ ';' display-panes -d 200	# enhance keybind n
 
 # Copy-mode:
 unbind [
