tmux: bind '[' to tmux panel

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -101,9 +101,9 @@ bind -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 bind -T copy-mode-vi Escape send -X cancel
 
 # Misc:
-bind [ popup -E -T "Plugin Menu" \
-		"tmux new -n plugin ${tmux_tool}/main-menu ';' \
-		set status off"
+# bind [ popup -E -T "Main Menu" \
+# 		"tmux new -n plugin ${tmux_tool}/main-menu ';' \
+# 		set status off"
 bind o run "${tmux_tool}/debug-console"
 bind ? list-keys -T prefix ';' list-keys -T copy-mode-vi
 bind j copy-mode ';' send-key ?			# search history from botton
@@ -124,9 +124,9 @@ set -g @plugin 'tmux-plugins/tmux-yank'         # Copied text could be used outs
 set -g @plugin 'ofirgall/tmux-window-name'      # Name your tmux windows smartly, like IDE's.
 
 set -g @plugin 'jaclu/tmux-menus'
-set -g @menus_trigger '.'
-set -g @menus_location_x 'P'
-set -g @menus_location_y 'P'
+set -g @menus_trigger '['
+set -g @menus_location_x 'C'
+set -g @menus_location_y 'C'
 
 set -g @plugin 'fcsonline/tmux-thumbs'
 unbind \'							# Prompt for a window index to select.
