tmux: update copy mode operations more like vim visual mode

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -92,13 +92,17 @@ bind -r n display-panes -b -d 200 ';' select-pane -Z -t :.+ ';' display-panes -d
 
 # Copy-mode:
 unbind [
-bind v copy-mode
-unbind ]
-bind p paste-buffer
+bind b copy-mode
+bind v copy-mode \; send-keys v
+bind V copy-mode \; send-keys V
+bind 'C-v' copy-mode \; send-keys C-v
 bind -T copy-mode-vi 'v' send -X begin-selection
 bind -T copy-mode-vi 'C-v' send -X rectangle-toggle ';' send -X begin-selection
 bind -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 bind -T copy-mode-vi Escape send -X cancel
+
+unbind ]
+bind p paste-buffer
 
 # Misc:
 # bind [ popup -E -T "Main Menu" \
