tmux: add fuzzback plugin to search history

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -110,7 +110,6 @@ bind p paste-buffer
 # 		set status off"
 bind o run "${tmux_tool}/debug-console"
 bind ? list-keys -T prefix ';' list-keys -T copy-mode-vi
-bind j copy-mode ';' send-key ?			# search history from botton
 bind , new-window -n 'tmux-profile' nvim ${tmux_home}/tmux.conf
 bind C confirm-before -p "Do you really want to clear history? (y/n)" clear-history
 
@@ -136,6 +135,11 @@ set -g @plugin 'fcsonline/tmux-thumbs'
 unbind \'							# Prompt for a window index to select.
 set -g @thumbs-key "\'"
 
+set -g @plugin 'roosta/tmux-fuzzback'
+set -g @fuzzback-bind 'j'
+# Enable tmux popup. Keep in mind that only recent versions 3.2 and above of tmux support this.
+set -g @fuzzback-popup 1
+set -g @fuzzback-popup-size '90%'
 
 ## Themes
 # Dracula: https://draculatheme.com/tmux
