tmux: add extrakto to replace tmux-thumbs

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -131,9 +131,11 @@ set -g @menus_trigger '['
 set -g @menus_location_x 'C'
 set -g @menus_location_y 'C'
 
-set -g @plugin 'fcsonline/tmux-thumbs'
-unbind \'							# Prompt for a window index to select.
-set -g @thumbs-key "\'"
+set -g @plugin 'laktak/extrakto'
+set -g @extrakto_key "\'"
+set -g @extrakto_fzf_unset_default_opts "false"  # keep our custom FZF_DEFAULT_OPTS
+set -g @extrakto_grab_area recent
+set -g @extrakto_popup_size '80%'
 
 set -g @plugin 'roosta/tmux-fuzzback'
 set -g @fuzzback-bind 'j'
