--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -105,17 +105,17 @@ unbind ]
 bind p paste-buffer
 
 # Misc:
-# bind [ popup -E -T "Main Menu" \
+# bind [ popup -E -T " Main Menu " \
 # 		"tmux new -n plugin ${tmux_tool}/main-menu ';' \
 # 		set status off"
 bind o run "${tmux_tool}/debug-console"
 bind ? list-keys -T prefix ';' list-keys -T copy-mode-vi
-bind , new-window -n 'tmux-profile' nvim ${tmux_home}/tmux.conf
+bind , new-window -n '[tmux-conf]' nvim ${tmux_home}/tmux.conf
 bind \; new-window -n '[git]' -c '#{pane_current_path}' tig
 bind C confirm-before -p "Do you really want to clear history? (y/n)" clear-history
 
 ## Plugins
-bind ] popup -EE -T "Plugin Menu" \
+bind ] popup -EE -T " Plugin Menu " \
 		"tmux new -n plugin ${tmux_tool}/plugin-menu ';' \
 		set status off"
 
