tmux: add plugin for showing tmux memory usage
1. Enable tmux memory
2. Add more plugin support options

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -146,24 +146,31 @@ set -g @fuzzback-popup-size '90%'
 
 ## Themes
 # Dracula: https://draculatheme.com/tmux
+# Dracula Core:
 set -g @plugin 'dracula/tmux'
-# '*' -> current pane, '-' -> previous window, '!' -> bell
-set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session
+set -g @dracula-show-empty-plugins true
+set -g @dracula-refresh-rate 1
+# Flag meaning:
+# '*': current pane
+# '-': previous window
+# '!': bell
+set -g @dracula-show-flags true
 
-# show dracula plugins
-# available plugins:
-# battery, cpu-usage, gpu-usage, ram-usage, network, network-bandwith,
-# weather, time
-set -g @dracula-plugins "cpu-usage ram-usage"
-set -g @dracula-show-battery false
-set -g @dracula-show-network false
-set -g @dracula-show-weather false
-set -g @dracula-show-time false
-set -g @dracula-day-month false
-set -g @dracula-ram-usage false
-set -g @dracula-cpu-usage false
-set -g @dracula-refresh-rate 5
+# Dracula Plugins:
+#   battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage,
+#   network, network-bandwidth, network-ping, ssh-session,
+#   attached-clients, network-vpn, weather, time, mpc, spotify-tui,
+#   kubernetes-context, synchronize-panes
+set -g @dracula-plugins "tmux-ram-usage ram-usage cpu-usage"
+set -g @dracula-tmux-ram-usage-label "TMUX"
+
+# Dracula Colorschemes:
+# Available Colors:
+#   white, gray, dark_gray, light_purple, dark_purple, cyan, green, orange, red, pink, yellow
+# Command Format:
+#   set -g @dracula-[plugin-name]-colors "[background] [foreground]"
+set -g @dracula-tmux-ram-usage-colors "dark_purple white"
 
 # tmux-gruvbox: https://github.com/egel/tmux-gruvbox
 # set -g @plugin 'egel/tmux-gruvbox'
