--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -88,7 +88,7 @@ unbind %
 bind - split-window -v -c "#{pane_current_path}" ';' select-layout -E
 bind x confirm-before -p "Do you really want to kill this pane? (y/n)" kill-pane ';' select-layout -E	# enhance keybind x 
 unbind o
-bind -r n display-panes -b -d 200 ';' select-pane -Z -t :.+ ';' display-panes -d 200	# enhance keybind n
+bind -r n run "${tmux_tool}/switch-pane"
 
 # Copy-mode:
 unbind [
