tmux: rename scripts that emphase bash

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -88,7 +88,7 @@ unbind %
 bind - split-window -v -c "#{pane_current_path}" ';' select-layout -E
 bind x confirm-before -p "Do you really want to kill this pane? (y/n)" kill-pane ';' select-layout -E	# enhance keybind x 
 unbind o
-bind -r n run "${tmux_tool}/switch-pane"
+bind -r n run "${tmux_tool}/switch-pane.bash"
 
 # Copy-mode:
 unbind [
@@ -106,9 +106,9 @@ bind p paste-buffer
 
 # Misc:
 # bind [ popup -E -T " Main Menu " \
-# 		"tmux new -n plugin ${tmux_tool}/main-menu ';' \
+# 		"tmux new -n plugin ${tmux_tool}/main-menu.bash ';' \
 # 		set status off"
-bind o run "${tmux_tool}/debug-console"
+bind o run "${tmux_tool}/debug-console.bash"
 bind ? list-keys -T prefix ';' list-keys -T copy-mode-vi
 bind , new-window -n '[tmux-conf]' nvim ${tmux_home}/tmux.conf
 bind \; new-window -n '[git]' -c '#{pane_current_path}' tig
@@ -116,7 +116,7 @@ bind C confirm-before -p "Do you really want to clear history? (y/n)" clear-hist
 
 ## Plugins
 bind ] popup -EE -T " Plugin Menu " \
-		"tmux new -n plugin ${tmux_tool}/plugin-menu ';' \
+		"tmux new -n plugin ${tmux_tool}/plugin-menu.bash ';' \
 		set status off"
 
 # TPM(tmux plugin manager) itself
