tmux: use bash script for tig

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -111,7 +111,7 @@ bind p paste-buffer
 bind o run "${tmux_tool}/debug-console.bash"
 bind ? list-keys -T prefix ';' list-keys -T copy-mode-vi
 bind , new-window -n '[tmux-conf]' nvim ${tmux_home}/tmux.conf
-bind \; new-window -n '[git]' -c '#{pane_current_path}' tig
+bind \; new-window -n '[git]' -c '#{pane_current_path}' ${tmux_tool}/tig.bash
 bind C confirm-before -p "Do you really want to clear history? (y/n)" clear-history
 
 ## Plugins
