tmux: fix invalid `-t` option

--- a/config/tmux/linux.conf
+++ b/config/tmux/linux.conf
@@ -1,7 +1,7 @@
 # Add some configs that only available for Linux
 
 # when you copy some text, it will automatically be copied to OS clipboard.
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
 
 # when you press <Control> Ctrl-p, it will put the content of x clipboard into Tmux buffer and paste it.
 bind C-p run-shell "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
