tmux: add platform specific configurations

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -119,6 +119,16 @@ bind ] popup -EE -T " Plugin Menu " \
 		"tmux new -n plugin ${tmux_tool}/plugin-menu.bash ';' \
 		set status off"
 
+if '[[ $OSTYPE == "linux-gnu" ]]' {
+	if '[[ -n "$WSL_DISTRO_NAME" ]]' {
+		source ${tmux_home}/plat/wsl.conf
+	}{
+		source ${tmux_home}/plat/linux.conf
+	}
+}{ if '[[ $OSTYPE == "darwin" ]]' {
+	source ${tmux_home}/plat/mac.conf
+}}
+
 # TPM(tmux plugin manager) itself
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'     # Make tmux more sensible
