tmux: add new menu plugin powered by fzf

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -137,10 +137,9 @@ set -g @plugin 'tmux-plugins/tmux-cowboy'		# Kill no-response process in current
 set -g @plugin 'tmux-plugins/tmux-yank'         # Copied text could be used outside tmux
 set -g @plugin 'ofirgall/tmux-window-name'      # Name your tmux windows smartly, like IDE's.
 
-set -g @plugin 'jaclu/tmux-menus'
-set -g @menus_trigger '['
-set -g @menus_location_x 'C'
-set -g @menus_location_y 'C'
+TMUX_FZF_LAUNCH_KEY='['
+TMUX_FZF_OPTIONS="-p -w 62% -h 38% -m"
+set -g @plugin 'sainnhe/tmux-fzf'
 
 set -g @plugin 'laktak/extrakto'
 set -g @extrakto_key "\'"
