kitty: copy-on-select and remove ctrl+shift+r

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -348,7 +348,7 @@ font_size 15.0
 #: URLs under the mouse cursor. By default, all characters that are
 #: legal in URLs are allowed.
 
-# copy_on_select no
+copy_on_select yes
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, selecting text with the mouse will cause the text to be
@@ -381,7 +381,7 @@ font_size 15.0
 #:     the kitty config directory on the pasted text. The text returned by the
 #:     function will be actually pasted.
 
-# strip_trailing_spaces never
+strip_trailing_spaces always
 
 #: Remove spaces at the end of lines when copying to clipboard. A
 #: value of smart will do it when using normal selections, but not
@@ -1517,6 +1517,9 @@ editor /usr/local/bin/vim
 #: }}}
 
 #: Keyboard shortcuts {{{
+
+#: Karl: cancel ctrl+shift+r as the keybind is 'redo' for vim
+map ctrl+shift+r no_op
 
 #: Keys are identified simply by their lowercase Unicode characters.
 #: For example: a for the A key, [ for the left square bracket key,
