--- a/config/tig/config
+++ b/config/tig/config
@@ -37,7 +37,6 @@ bind generic l none
 bind generic L none
 bind generic d none
 bind generic m none
-bind generic c none
 bind generic s none
 bind generic S none
 bind generic , none
@@ -49,104 +48,128 @@ bind generic o none
 
 # Views {
 ## Functional
-bind generic 1 view-main
-bind generic l view-log
-bind generic 2 view-refs
-bind generic 3 view-status
-bind generic 4 view-stash
-bind generic 5 view-reflog
+bind generic v  none
+bind generic v<Enter> view-main
+bind generic vl view-log
 
-## Tools
-bind generic df view-diff
-bind generic sg view-stage
-bind generic fd view-blob
-bind generic bl view-blame
-bind generic pg view-pager
-bind generic rg view-grep
+bind main    ,  view-status
+bind status  ,  view-stash
+bind stash   ,  view-main
+bind generic vs view-status
+# No independent keybind to view-log
 
-## Help
-bind generic h view-help
+bind main    .  view-refs
+bind refs    .  view-reflog
+bind reflog  .  view-main
+bind generic vr view-refs
 
-## View config
-bind generic O options
-bind generic M maximize
+bind tree    ,  view-blob
+bind blob    ,  view-blame
+bind blame   ,  view-tree
+bind generic vb view-blame
+bind generic vf view-tree
+# No independent keybind to view-blob
+
+bind generic v/ view-grep
+bind generic vh view-help
+bind generic vm maximize
+
+## Options
+bind generic o  none
+bind generic oo :toggle sort-order
+bind generic os :toggle sort-field
+bind generic on :toggle line-number
+bind generic od :toggle date
+bind generic oa :toggle author
+bind generic oi :toggle id
+bind generic og :toggle line-graphics
+bind generic of :toggle file-name
+bind generic oF :toggle file-filter
+bind generic op :toggle ignore-space
+bind generic ot :toggle commit-title-overflow
+bind generic or :toggle commit-title-refs
 # }
 
 # Misc {
 ## Move light bar to top/button
-bind generic G none
+bind generic g  none
 bind generic gg move-first-line
-bind generic G move-last-line
-bind main G move-last-line
+bind generic G  move-last-line
+bind main    G  move-last-line
 
-## Close/Exit
-bind generic q view-close-no-quit
-bind generic Q quit
+bind generic l  enter
+bind generic h  view-close-no-quit
+bind generic q  view-close-no-quit
+bind generic J  next
+bind generic K  previous
+bind generic Q  quit
+bind generic <Ctrl-C> none
 
-## Show CWD
-bind generic cwd +git rev-parse --show-toplevel
+bind generic pwd      +git rev-parse --show-toplevel
 # }
 
 # Feature {
 ## Commit
-bind main c<ENTER> >git commit
-bind main ca >?git commit --amend
-bind main cn @?git commit --amend --no-edit
-bind stage c<ENTER> >git commit
-bind stage ca >?git commit --amend
-bind stage cn @?git commit --amend --no-edit
-bind status c<ENTER> >git commit
-bind status ca >?git commit --amend
-bind status cn @?git commit --amend --no-edit
+bind generic c        none
+bind main    c<ENTER> >git commit -v
+bind main    ca       >?git commit -v --amend
+bind main    cn       @?git commit --amend --no-edit
+bind stage   c<ENTER> >git commit -v
+bind stage   ca       >?git commit -v --amend
+bind stage   cn       @?git commit --amend --no-edit
+bind status  c<ENTER> >git commit -v
+bind status  ca       >?git commit -v --amend
+bind status  cn       @?git commit --amend --no-edit
 
 ## Stage/Unstage file
-bind stage f @sh -c 'if git diff --cached --quiet %(file); then git add %(file); else git reset --quiet HEAD %(file); fi'
-bind stage F @sh -c 'if git diff --cached --quiet; then git add -u; else git reset --quiet HEAD; fi'
+bind stage   f        @sh -c 'if git diff --cached --quiet %(file); then git add %(file); else git reset --quiet HEAD %(file); fi'
+bind stage   F        @sh -c 'if git diff --cached --quiet; then git add -u; else git reset --quiet HEAD; fi'
 
 ## Add stash
-bind main ay @git stash save "%(prompt new stash: )"
-bind stage ay @git stash save "%(prompt new stash: )"
-bind status ay @git stash save "%(prompt new stash: )"
+bind generic a  none
+bind main    ay @git stash save "%(prompt new stash: )"
+bind stage   ay @git stash save "%(prompt new stash: )"
+bind status  ay @git stash save "%(prompt new stash: )"
 
 ## Add/Del tag/branch
-bind main at @git tag "%(prompt new tag: )" %(commit)
+bind main   at @git tag "%(prompt new tag: )" %(commit)
 bind reflog at @git tag "%(prompt new tag: )" %(commit)
-bind main dt @?git tag -d %(tag)
-bind refs dt @?git tag -d %(tag)
+bind main   dt @?git tag -d %(tag)
+bind refs   dt @?git tag -d %(tag)
 
-bind main ab @git branch "%(prompt new branch: )" %(commit)
+bind main   ab @git branch "%(prompt new branch: )" %(commit)
 bind reflog ab @git branch "%(prompt new branch: )" %(commit)
-bind main db @?git branch -D %(branch)
-bind refs db @?git branch -D %(branch)
+bind main   db @?git branch -D %(branch)
+bind refs   db @?git branch -D %(branch)
 
 ## Checkout
-bind main co @git checkout %(commit)
-bind refs co @git checkout %(ref)
-bind refs cd @git checkout -d %(ref)
+bind main   co @git checkout %(commit)
+bind refs   co @git checkout %(ref)
+bind refs   cd @git checkout -d %(ref)
 bind reflog co @git checkout %(commit)
 
 ### Reset file
 bind status co @?git checkout %(file)
 
 ## Reset
-bind main rh @?git reset --hard %(commit)
+bind main   rh @?git reset --hard %(commit)
 bind reflog rh @?git reset --hard %(commit)
-bind main rs @?git reset %(commit)
+bind main   rs @?git reset %(commit)
 bind reflog rs @?git reset %(commit)
-bind main rn @?git reset --hard HEAD
-bind stage rn @?git reset --hard HEAD
-bind main rp @?git reset HEAD@{1}
+bind main   rn @?git reset --hard HEAD
+bind stage  rn @?git reset --hard HEAD
+bind main   rp @?git reset HEAD@{1}
 
 ## Cherry-pick
-bind main cp @sh -c 'git cherry-pick -s %(commit) || git cherry-pick --abort'
-bind refs cp @sh -c 'git cherry-pick -s %(commit) || git cherry-pick --abort'
+bind main   cp @sh -c 'git cherry-pick -s %(commit) || git cherry-pick --abort'
+bind refs   cp @sh -c 'git cherry-pick -s %(commit) || git cherry-pick --abort'
 bind reflog cp @sh -c 'git cherry-pick -s %(commit) || git cherry-pick --abort'
 
 ## Format patch
-bind main fp ?+git format-patch -k --binary --histogram -1 -o . %(commit)
-bind main fP ?+git format-patch -k --binary --histogram -o patchset %(commit)^
-bind diff fp ?+git format-patch -k --binary --histogram -1 -o . %(commit)
-bind blame fp ?+git format-patch -k --binary --histogram -1 -o . %(commit)
+bind main   fp ?+git format-patch -k --binary --histogram -1 -o . %(commit)
+bind main   fP ?+git format-patch -k --binary --histogram -o patchset %(commit)^
+bind diff   fp ?+git format-patch -k --binary --histogram -1 -o . %(commit)
+bind blame  fp ?+git format-patch -k --binary --histogram -1 -o . %(commit)
 bind reflog fp ?+git format-patch -k --binary --histogram -1 -o . %(commit)
 # }
 
@@ -170,9 +193,9 @@ bind status D @?git clean -fd
 bind refs C none
 bind refs ! none
 
-bind refs fa @git fetch --all
-bind refs m<ENTER> @sh -c 'git merge %(ref) || git merge --abort'
-bind refs rb @sh -c 'git rebase %(ref) || git rebase --abort'
+bind refs fa       @git fetch --all
+bind refs m<ENTER> @sh -c 'git merge  %(ref) || git merge  --abort'
+bind refs rb       @sh-c 'git rebase %(ref) || git rebase --abort'
 # only available in FF
 bind refs ps +?git fetch . HEAD:%(ref)
 # }
@@ -184,7 +207,7 @@ bind main ! none
 bind main rv @sh -c 'git revert --no-edit %(commit) || git revert --abort'
 bind main rb >?git rebase -i %(commit)
 bind main ra >?git rebase --abort
-bind main D @?git clean -fd
+bind main D  @?git clean -fd
 # }
 
 # Reflog {
