tmux: add highlight text and disable popup window

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -141,17 +141,18 @@ TMUX_FZF_LAUNCH_KEY='['
 TMUX_FZF_OPTIONS="-p -w 62% -h 38% -m"
 set -g @plugin 'sainnhe/tmux-fzf'
 
-set -g @plugin 'laktak/extrakto'
-set -g @extrakto_key "\'"
-set -g @extrakto_fzf_unset_default_opts "false"  # keep our custom FZF_DEFAULT_OPTS
-set -g @extrakto_grab_area recent
-set -g @extrakto_popup_size '80%'
+set -g @plugin                'laktak/extrakto'
+set -g @extrakto_key          "\'"
+set -g @extrakto_grab_area    recent
+set -g @extrakto_split_size   15
+set -g @extrakto_split_direction        'v'
+set -g @extrakto_fzf_unset_default_opts "false"
 
-set -g @plugin 'roosta/tmux-fuzzback'
-set -g @fuzzback-bind 'j'
-# Enable tmux popup. Keep in mind that only recent versions 3.2 and above of tmux support this.
-set -g @fuzzback-popup 1
-set -g @fuzzback-popup-size '90%'
+set -g @plugin                'roosta/tmux-fuzzback'
+set -g @fuzzback-bind         'j'
+set -g @fuzzback-popup        0
+set -g @fuzzback-hide-preview 1
+set -g @fuzzback-fzf-colors   'hl:1:underline,hl+:1:underline'
 
 ## Themes
 # Dracula: https://draculatheme.com/tmux
