tmux: disable popup window of extrakto due to pane issue
https://github.com/laktak/extrakto/issues/28

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -144,8 +144,8 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin                'laktak/extrakto'
 set -g @extrakto_key          "\'"
 set -g @extrakto_grab_area    recent
-set -g @extrakto_split_size   15
-set -g @extrakto_split_direction        'v'
+set -g @extrakto_popup_size   '60%'
+set -g @extrakto_split_direction        'p'
 set -g @extrakto_fzf_unset_default_opts "false"
 
 set -g @plugin                'roosta/tmux-fuzzback'
