nvim: remove install script and assign specific install version

--- a/nvim/Makefile
+++ b/nvim/Makefile
@@ -1,18 +1,25 @@
-config_dir=${XDG_CONFIG_HOME}/nvim
+CONFIG_DIR=${XDG_CONFIG_HOME}/nvim
+NVIM_VER=0.9.4
 
 .ONESHELL:
-nvim-conf:
-	@echo "-- setup nvim config --"
+config.nvim:
+	$(H)echo "-- setup nvim config --"
 	PS3='select a fuzzy finder above: '
-	select opt in 'fzf' 'telescope' 'cancel'; do
+	$(H)select opt in 'fzf' 'telescope' 'cancel'; do
 		if [[ "$opt" != 'cancel' ]]; then
-			echo "let g:fuzzy_finder = '$opt'" > ${config_dir}/config.vim
+			echo "let g:fuzzy_finder = '$opt'" > ${CONFIG_DIR}/config.vim
 		fi
 		break
 	done
-	@echo "let g:editor_theme = 'material'" >> ${config_dir}/config.vim
-	@nvim +"nnoremap q <cmd>qa!<cr>" \
+	$(H)echo "let g:editor_theme = 'material'" >> ${CONFIG_DIR}/config.vim
+	$(H)nvim +"nnoremap q <cmd>qa!<cr>" \
 			+"set nomodifiable nomodified" \
 			<<< "Press 'q' to exit nvim if all plugins were installed."
 
-.PHONY: clang-format editorconfig nvim-conf
+install.nvim:
+	$(H)brew install neovim@${NVIM_VER}
+
+remove.nvim:
+	$(H)brew remove neovim
+
+.PHONY: config.nvim
